# xLLM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: benchmark.cpp  benchmark_batch.cpp  prompts.txt
include/: data.h  executor.h  file.h  model.h  operator.h  param.h  threadpool.h  utils.h  xllm.h
include/cuda/: cudadevice.h  xllm-cuda.cuh
include/gpu/: cudadevice.h
scripts/: export.py  export_tokenizer.py  export_weight.py  requirements.txt  test.py
src/: benchmark.cpp  data.cpp  executor.cpp  model.cpp  operator.cpp  param.cpp  quant.cpp  xllm.cpp
src/cpu/: cpudevice.cpp
src/cuda/: cudadevice.cpp  xllm-cuda.cu
src/gpu/: cudadevice.cpp
tests/: test_data.cpp  test_main.cpp  test_opeartor.cpp  test_params.cpp  test_quant.cpp  test_tokenizer.cpp
